# rust-wasm-prototype

./: Cargo.toml
host/: Cargo.toml
host-add/: Cargo.toml
host-add/src/: add.rs
host-wasmtime/: Cargo.toml
host-wasmtime-2/: Cargo.toml
host-wasmtime-2/src/: main.rs
host-wasmtime/src/: main.rs
host/src/: main.rs
wasm_component_a/: Cargo.toml
wasm_component_a/wit/: world.wit
wasm_component_b/: Cargo.toml
wasm_component_b/src/: lib.rs
wasm_component_b/wit/: mapgen.wit
wasm_component_c/: Cargo.toml  README.md
wasm_component_c/src/: lib.rs
wasm_component_c/wit/: clegane.wit  mapgen.wit
wasm_module_a/: Cargo.toml
wasm_module_a/src/: lib.rs
wasm_module_b/: Cargo.toml
