[package]
name = "host-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "15.0.1"
wasmtime-wasi = "15.0.1"
wasi-common = "15.0.1"
wasi-tokio = "15.0.1"
tokio = { version = "1", features = ["full"] }

[workspace]
