[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasmer_runtime"]
wasmer_runtime = ["wasmer"]
wasmtime_runtime = ["wasmtime"]

[dependencies]
wasmer = { version = "4", optional = true }
wasmtime = { version = "15", optional = true }
rand = "0.8.5"
